deploy/k8s/api-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-runner-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-runner-service
  template:
    metadata:
      labels:
        app: api-runner-service
    spec:
      containers:
        - name: api-runner-service
          image: squirrel-api/api-runner-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
