deploy/k8s/api-runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-runner-service
spec:
  type: ClusterIP
  selector:
    app: api-runner-service
  ports:
    - name: http
      port: 3004
      targetPort: 3004
