deploy/k8s/billing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  type: ClusterIP
  selector:
    app: billing-service
  ports:
    - name: http
      port: 3006
      targetPort: 3006
