deploy/k8s/logs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs-service
spec:
  type: ClusterIP
  selector:
    app: logs-service
  ports:
    - name: http
      port: 3008
      targetPort: 3008
